# CPSC362_Project

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  address.hpp  build.sh  cmake_install.cmake  contactinfo.hpp  crow_example  crow_functions.cpp  date.hpp  dockerfile  hotel  hotel_backend.cpp  hotel_backend.hpp  json_util.cpp  json_util.hpp  main.cpp  main_test.cpp  reservation.cpp  reservation.hpp  room.cpp  room.hpp  room_db.cpp  room_db.hpp  user.cpp  user.hpp  user_db.cpp  user_db.hpp
CPSC362Front-main/: package-lock.json  package.json
CPSC362Front-main/api/: index.jsx
CPSC362Front-main/client/: package-lock.json  package.json  vite.config.js
CPSC362Front-main/client/src/: App.jsx  Footer.jsx  Header.jsx  index.css
CPSC362Front-main/client/src/assets/components/: Authenticate.jsx
CPSC362Front-main/client/src/images/: Etiquette.jfif  IceClimbing.jfif
CPSC362Front-main/client/src/pages/: AccountPage.jsx  Confirmation.jsx  FindReservation.jsx  IndexPage.jsx  LoginPage.jsx  PaymentPage.jsx  RegisterPage.jsx  RoomPage.jsx  SendEmail.jsx  Services.jsx
CPSC362Front-main/client/src/rooms/: DeluxeRoom.jsx  StandardRoom.jsx  SuiteRoom.jsx
data/: reservation_records.json
html/: index.html  login.js
server_utils/: crow_all.h  sessions.h
